fix(toolbar): fix overflowing vpn button

--- a/parfait/components/toolbar.css
+++ b/parfait/components/toolbar.css
@@ -43,6 +43,10 @@ toolbar .toolbarbutton-1:not(#PlacesChevron, .toolbarbutton-combined-buttons-dro
     }
   }
 }
+#ipprotection-button:not([overflowedItem="true"], [cui-areatype="panel"]) {
+  min-width: unset !important;
+  max-width: unset !important;
+}
 .private-browsing-indicator-with-label,
 #fxa-avatar-label {
   display: none;
